feat:create header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <img src="img/logo.svg" alt="Logo boolean">
+        <img src="img/logo.svg" alt="Logo boolean" class="logo">
     </header>
     
 </body>
