--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
         <img src="img/logo.svg" alt="Logo boolean" class="logo">
     </header>
     
+    <main>
+        <h1>
+            Internet deve essere al servio del "bene pubblico": <br> il manifesto di Tim Barners-Lee
+        </h1>
+        
+
+    </main>
 </body>
 </html>
