--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
     </header>
     
     <main>
+
         <h1>
             Internet deve essere al servio del "bene pubblico": <br> il manifesto di Tim Barners-Lee
         </h1>
+
+        <h2>
+            Scritto da <span>The Booleaner</span>
+        </h2>
+
+        <h3>il 10/10/2020</h3>
         
+
 
     </main>
 </body>
