feat: add image of Tim Barnes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
             Scritto da <span>The Booleaner</span>
         </h2>
 
-        <h3>il 10/10/2020</h3>
+        <h3>il 10/10/2020</h3> <br>
+        <div>
+            <img src="img/tim-1.jpg" alt="Foto Tim 1">
+            <img src="img/tim-2.jpg" alt="Foto Tim 2">
+        </div>
+        
+
+
         
 
 
