feat: add subtitle images

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
         </div>
         <!-- Fine Immagini Tim-->
 
-        
+        <!-- Inizio Sottotitolo Immagini-->
+        <div class="subtitle-img">
+            1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+            2nd Photo: WIkimedia, by Paul Clarke
+        </div>
+        <!-- Fine Sottotitolo Immagini-->
+
     </main>
     <!-- Fine Main-->
 </body>
