--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
         </div>
         <!-- Fine Sottotitolo Immagini-->
 
+        <!-- Inizio Paragrafo-->
+         <p class="bold">
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
+            ad minim veniam, quis nostrud <span class="text-background">exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span> Duis autem vel eum iriure dolor in hendrerit in
+            vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
+            zzril delenit augue duis dolore te feugait nulla facilisi.
+
+         <p>
+        <!-- Fine Paragrafo-->
+
     </main>
     <!-- Fine Main-->
 </body>
