feat: add head of table

--- a/index.html
+++ b/index.html
@@ -49,11 +49,30 @@
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
             ad minim veniam, quis nostrud <span class="text-background">exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span> Duis autem vel eum iriure dolor in hendrerit in
             vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
-            zzril delenit augue duis dolore te feugait nulla facilisi.
-
+            zzril delenit augue duis dolore te feugait nulla facilisi. <br>
          <p>
         <!-- Fine Paragrafo-->
 
+        <!-- Inizio Lista-->
+        <ul class="bold">
+            <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
+            <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
+            <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
+        </ul>
+        <!-- Fine Lista-->
+
+        <!-- Inizio Tabella-->
+        <table>
+            <thead>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </tr>
+            </thead>
+        </table>
+
+        <!-- Fine Tabella-->
     </main>
     <!-- Fine Main-->
 </body>
