feat: finish table

--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
                     <th>Lorem ipsum dolor</th>
                 </tr>
             </thead>
+
+            <tbody>
+                <tr class="color-table">
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,placeat consectetur ullam fugiat similique perferendis repellendus illo mollitiaeveniet expedita a quia modi. Totam saepe quibusdam natus harum</th>
+                </tr>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,placeat consectetur ullam fugiat similique perferendis repellendus illo mollitiaeveniet expedita a quia modi. Totam saepe quibusdam natus harum</th>
+                </tr>
+                <tr class="color-table">
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,placeat consectetur ullam fugiat similique perferendis repellendus illo mollitiaeveniet expedita a quia modi. Totam saepe quibusdam natus harum</th>
+                </tr>
+            </tbody>
         </table>
 
         <!-- Fine Tabella-->
