fix: delate class bold on css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- Fine Sottotitolo Immagini-->
 
         <!-- Inizio Paragrafo-->
-         <p class="bold">
+         <p>
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
             ad minim veniam, quis nostrud <span class="text-background">exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span> Duis autem vel eum iriure dolor in hendrerit in
             vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
@@ -54,7 +54,7 @@
         <!-- Fine Paragrafo-->
 
         <!-- Inizio Lista-->
-        <ul class="bold">
+        <ul>
             <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
             <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
             <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
@@ -89,8 +89,16 @@
                 </tr>
             </tbody>
         </table>
-
         <!-- Fine Tabella-->
+
+        <!-- Inizio Secondo Paragrafo -->
+        <p>
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
+            ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in
+            vulputate velit esse molestie consequat, vel <span class="text-background">illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto </span> odio dignissim qui blandit praesent luptatum
+            zzril delenit augue duis dolore te feugait nulla facilisi.
+        </p>
+        <!-- Fine Secondo Paragrafo -->
     </main>
     <!-- Fine Main-->
 </body>
