feat: add subtitle css and fix h2 and h3

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
         <!-- Fine Titolo-->
 
         <!-- Inizio Sottotitolo-->
-        <h2>
+        <h2 class="subtitle">
             Scritto da <span>The Booleaner</span>
         </h2>
 
-        <h3>il 10/10/2020</h3> <br>
+        <h3 lass="subtitle">
+            il 10/10/2020
+        </h3> <br>
         <!-- Fine Sottotitolo-->
 
         <!-- Inizio Immagini Tim-->
@@ -99,6 +101,10 @@
             zzril delenit augue duis dolore te feugait nulla facilisi.
         </p>
         <!-- Fine Secondo Paragrafo -->
+
+        <h3>Potrebbero interessarti</h3>
+
+        <h2>Lorem ipsum dolor</h2>
     </main>
     <!-- Fine Main-->
 </body>
