--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </p>
         <!-- Fine Secondo Paragrafo -->
 
-        <h3>Potrebbero interessarti</h3>
+        <h3 class="subtitle">Potrebbero interessarti</h3>
 
         <h2>Lorem ipsum dolor</h2>
     </main>
