feat: add last photo whit text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             Scritto da <span>The Booleaner</span>
         </h2>
 
-        <h3 lass="subtitle">
+        <h3 class="subtitle">
             il 10/10/2020
         </h3> <br>
         <!-- Fine Sottotitolo-->
@@ -102,9 +102,19 @@
         </p>
         <!-- Fine Secondo Paragrafo -->
 
+        <!-- Inizio Foto con testo -->
         <h3 class="subtitle">Potrebbero interessarti</h3>
 
-        <h2>Lorem ipsum dolor</h2>
+        <div class="monitor">
+            <h2 class="text-image">Lorem ipsum dolor</h2>
+        </div>
+
+        <br>
+
+        <div class="graph">
+            <h2 class="text-image">Lorem ipsum dolor</h2>
+        </div>
+        <!-- Fine Foto con testo -->
     </main>
     <!-- Fine Main-->
 </body>
