fix: fixed table

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <tr class="color-table">
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
-                    <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,placeat consectetur ullam fugiat similique perferendis repellendus illo mollitiaeveniet expedita a quia modi. Totam saepe quibusdam natus harum</th>
+                    <th class="misure">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo,placeat consectetur ullam fugiat similique perferendis repellendus illo mollitiaeveniet expedita a quia modi. Totam saepe quibusdam natus harum</th>
                 </tr>
                 <tr>
                     <th>Lorem ipsum dolor</th>
